--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^8.2.0",
     "helmet": "^4.2.0",
     "mongoose": "^5.10.15",
+    "nestjs-pino": "^1.3.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
