implements pipedrive module

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@ MONGO_INITDB_DATABASE=
 APP_USER_USERNAME=
 APP_USER_PASSWORD=
 MONGO_URI=
+PIPEDRIVE_API_TOKEN=
+PIPEDRIVE_API_URL=
+PIPEDRIVE_JOB_DELAY=
