--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@nestjs/core": "^7.5.1",
     "@nestjs/mongoose": "^7.1.0",
     "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/schedule": "^0.4.1",
     "@nestjs/swagger": "^4.7.5",
     "@nestjs/terminus": "^7.0.1",
+    "axios": "^0.21.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "dotenv": "^8.2.0",
