--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-validator": "^0.12.2",
     "dotenv": "^8.2.0",
     "helmet": "^4.2.0",
+    "js2xmlparser": "^4.0.1",
     "mongoose": "^5.10.15",
     "nestjs-pino": "^1.3.0",
     "reflect-metadata": "^0.1.13",
