--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,5 +26,11 @@ services:
       - $PWD/db/scripts:/docker-entrypoint-initdb.d
     env_file: $PWD/.env
 
+  redis:
+    image: redis
+    container_name: linkapi_app_redis
+    ports:
+      - 6379:6379
+
 volumes:
   db:
