--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@nestjs/swagger": "^4.7.5",
     "@nestjs/terminus": "^7.0.1",
     "axios": "^0.21.0",
+    "cache-manager": "^3.4.0",
+    "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "dotenv": "^8.2.0",
@@ -45,6 +47,7 @@
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.5.1",
+    "@types/cache-manager": "^2.10.3",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
     "@types/mongoose": "^5.10.1",
